--- a/SAGHA_FRONT_END/nbproject/project.properties
+++ b/SAGHA_FRONT_END/nbproject/project.properties
@@ -29,10 +29,14 @@ dist.jar=${dist.dir}/SAGHA_FRONT_END.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=/opt/netbeans/ide/modules/ext/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
