--- a/SAGHA/nbproject/project.properties
+++ b/SAGHA/nbproject/project.properties
@@ -29,12 +29,16 @@ dist.jar=${dist.dir}/SAGHA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=Bibliotecas/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=Bibliotecas/jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
