--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /SAGHA/nbproject/private/
 /SAGHA/build/
 /SAGHA/dist/
+SAGHA/nbproject/private/private.xml
+SAGHA/nbproject/private/private.properties
+SAGHA/nbproject/private/private.xml
