2 relatorios sendo salvos em PDF

--- a/SAGHA/nbproject/project.properties
+++ b/SAGHA/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/SAGHA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.10.jar=Bibliotecas/itextpdf-5.5.10.jar
 file.reference.jcommon-1.0.23.jar=Bibliotecas/jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=Bibliotecas/jfreechart-1.0.19.jar
 includes=**
@@ -38,7 +39,8 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.itextpdf-5.5.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
